# TeleMorph

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: Makefile  api-reference.md  cli.md  getting-started.md  index.md
examples/: basic_usage.py  batch_convert.py  convert_with_custom_device.py  string_sessions.py
telemorph/: __init__.py  cli.py  converters.py  core.py  devices.py  sessions.py  utils.py
tests/: __init__.py  conftest.py  test_converters.py  test_core.py  test_devices.py  test_sessions.py  test_utils.py
